# springboot-lucky-system

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  cookies.txt  pom.xml
backend/: .env.example  .gitignore  Dockerfile  SECURITY_SETUP.md  pom.xml
backend/branchreport-service/: Cargo.toml  Dockerfile  README.md
backend/branchreport-service/src/handlers/: area_handler.rs  branch_handler.rs  health_handler.rs  mod.rs  subarea_handler.rs
backend/branchreport-service/src/models/: branch.rs
backend/call-service/: pom.xml
backend/delivery-service/: pom.xml
backend/gateway/: Dockerfile  pom.xml
backend/marketing-service/: Dockerfile  IMPLEMENTATION_SUMMARY.md  pom.xml
backend/user-service/: Dockerfile
devops/: README.md
devops/cloudflared/: config.yml  demo-dev-tunnel.json  demo-tunnel.json
devops/docker/: .env.example  BACKUP_GUIDE.md  README.md  docker-compose.dev.yml  docker-compose.yml
devops/jenkins/: .env  .env.example  INTEGRATION.md  Jenkinsfile  README.md  docker-compose.yml  plugins.txt
devops/k8s/: README.md  deploy.sh  kustomization.yaml  update.sh
devops/nginx/: nginx.conf
frontend/: .env.example  CALENDAR_IMPLEMENTATION_SUMMARY.md  PRODUCTION_FIX.md  PWA_IMPLEMENTATION_SUMMARY.md  PWA_SETUP.md  PWA_STANDARD.md  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/config/: env.ts
frontend/public/: manifest.json  sw.js
frontend/scripts/: generate-icons.mjs  generate-screenshots.mjs
infra/: README.md
infra/cloudflared/: README.md  cert.pem  config.dev.yml  (+1 more)
(+629 files in other folders)
