[package]
name = "branchreport-service"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.15", features = ["full"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
env_logger = "0.9"
log = "0.4"
postgres = "0.19"
tokio-postgres = "0.7"
postgres-types = "0.2"
bytes = "1.0"
